--- a/src/app/pages/grafica1/grafica1.component.html
+++ b/src/app/pages/grafica1/grafica1.component.html
@@ -1,1 +1,14 @@
-<p>grafica1 works!</p>
+<div class="row">
+  <div class="col-6">
+      <app-donut title="Ventas" [labels]="labels1" [data]="data1"></app-donut>
+  </div>
+  <div class="col-6">
+    <app-donut title="Compras" [labels]="labels2" [data]="data2"></app-donut>
+</div>
+<div class="col-6">
+  <app-donut title="Cambios" [labels]="labels3" [data]="data3"></app-donut>
+</div>
+<div class="col-6">
+  <app-donut title="Lo más sonado" [labels]="labels4" [data]="data4"></app-donut>
+</div>
+</div>
